--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,13 @@ services:
   - type: web
     name: finance-tracker-api
     env: python
+    region: frankfurt
+    plan: free
     buildCommand: pip install -r backend/requirements.txt
     startCommand: cd backend && uvicorn api:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.12.0
+        value: 3.11.0
       - key: DATABASE_URL
         value: sqlite:///./finance_tracker.db
     disk:
